econstructed databases and created columns for selection GUI. Also organised the codesby creating functions.

--- a/GUI/smart_farmer.ui
+++ b/GUI/smart_farmer.ui
@@ -17,14 +17,14 @@
    <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>70</y>
+      <x>60</x>
+      <y>50</y>
       <width>911</width>
       <height>671</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -290,7 +290,7 @@
       </widget>
      </widget>
     </widget>
-    <widget class="QWidget" name="tab_2">
+    <widget class="QWidget" name="selectionTab">
      <attribute name="title">
       <string>선택</string>
      </attribute>
@@ -331,6 +331,16 @@
       </property>
       <property name="text">
        <string>삭제</string>
+      </property>
+     </widget>
+     <widget class="QTableWidget" name="tableWidget">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>50</y>
+        <width>821</width>
+        <height>501</height>
+       </rect>
       </property>
      </widget>
     </widget>
