--- a/GUI/smart_farmer.ui
+++ b/GUI/smart_farmer.ui
@@ -294,7 +294,7 @@
      <attribute name="title">
       <string>선택</string>
      </attribute>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="addBtn">
       <property name="geometry">
        <rect>
         <x>190</x>
@@ -307,7 +307,7 @@
        <string>추가</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_2">
+     <widget class="QPushButton" name="deleteBtn">
       <property name="geometry">
        <rect>
         <x>30</x>
@@ -330,7 +330,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>삭제</string>
+       <string>적용</string>
       </property>
      </widget>
      <widget class="QTableWidget" name="tableWidget">
@@ -352,7 +352,7 @@
      <x>0</x>
      <y>0</y>
      <width>1057</width>
-     <height>22</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
