Though several parts need to be adjusted, deletion(table&db), addition(table&db), application(sending to arduino through serial port) work fine

--- a/GUI/smart_farmer.ui
+++ b/GUI/smart_farmer.ui
@@ -320,7 +320,7 @@
        <string>삭제</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_4">
+     <widget class="QPushButton" name="applyBtn">
       <property name="geometry">
        <rect>
         <x>730</x>
@@ -352,7 +352,7 @@
      <x>0</x>
      <y>0</y>
      <width>1057</width>
-     <height>26</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
