--- a/GUI/smart_farmer.ui
+++ b/GUI/smart_farmer.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -45,7 +45,7 @@
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
-      <widget class="QLabel" name="label">
+      <widget class="QLabel" name="tempNow">
        <property name="geometry">
         <rect>
          <x>40</x>
@@ -58,7 +58,7 @@
         <string>온도</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_2">
+      <widget class="QLabel" name="tempGoal">
        <property name="geometry">
         <rect>
          <x>40</x>
@@ -71,7 +71,7 @@
         <string>목표치</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_3">
+      <widget class="QLabel" name="tempWork">
        <property name="geometry">
         <rect>
          <x>40</x>
@@ -100,7 +100,7 @@
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
-      <widget class="QLabel" name="label_4">
+      <widget class="QLabel" name="humNow">
        <property name="geometry">
         <rect>
          <x>40</x>
@@ -113,7 +113,7 @@
         <string>습도</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_5">
+      <widget class="QLabel" name="humGoal">
        <property name="geometry">
         <rect>
          <x>40</x>
@@ -126,7 +126,7 @@
         <string>목표치</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_6">
+      <widget class="QLabel" name="humWork">
        <property name="geometry">
         <rect>
          <x>40</x>
@@ -155,7 +155,7 @@
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
-      <widget class="QLabel" name="label_7">
+      <widget class="QLabel" name="moistNow">
        <property name="geometry">
         <rect>
          <x>40</x>
@@ -165,10 +165,10 @@
         </rect>
        </property>
        <property name="text">
-        <string>온도</string>
+        <string>수분</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_8">
+      <widget class="QLabel" name="moistGoal">
        <property name="geometry">
         <rect>
          <x>40</x>
@@ -181,7 +181,7 @@
         <string>목표치</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_9">
+      <widget class="QLabel" name="moistWork">
        <property name="geometry">
         <rect>
          <x>40</x>
@@ -210,7 +210,7 @@
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
-      <widget class="QLabel" name="label_31">
+      <widget class="QLabel" name="ledNow">
        <property name="geometry">
         <rect>
          <x>40</x>
@@ -226,7 +226,7 @@
       <widget class="QLabel" name="label_32">
        <property name="geometry">
         <rect>
-         <x>40</x>
+         <x>30</x>
          <y>100</y>
          <width>51</width>
          <height>41</height>
@@ -236,7 +236,7 @@
         <string>RED</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_33">
+      <widget class="QLabel" name="redRate">
        <property name="geometry">
         <rect>
          <x>40</x>
@@ -252,7 +252,7 @@
       <widget class="QLabel" name="label_37">
        <property name="geometry">
         <rect>
-         <x>190</x>
+         <x>180</x>
          <y>100</y>
          <width>51</width>
          <height>41</height>
@@ -262,7 +262,7 @@
         <string>BLUE</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_38">
+      <widget class="QLabel" name="blueRate">
        <property name="geometry">
         <rect>
          <x>190</x>
@@ -344,6 +344,19 @@
       </property>
      </widget>
     </widget>
+   </widget>
+   <widget class="QPushButton" name="pb">
+    <property name="geometry">
+     <rect>
+      <x>920</x>
+      <y>20</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
