--- a/GUI/smart_farmer.ui
+++ b/GUI/smart_farmer.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1533</width>
-    <height>874</height>
+    <height>829</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -364,6 +364,47 @@ border-radius: 10px;</string>
         <width>821</width>
         <height>501</height>
        </rect>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab_daily">
+     <attribute name="title">
+      <string>일기</string>
+     </attribute>
+     <widget class="QTextEdit" name="TE_daily">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>20</y>
+        <width>1231</width>
+        <height>601</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="PBT_daily">
+      <property name="geometry">
+       <rect>
+        <x>1270</x>
+        <y>20</y>
+        <width>121</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>저장</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="PBT_clear">
+      <property name="geometry">
+       <rect>
+        <x>1270</x>
+        <y>570</y>
+        <width>121</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>초기화</string>
       </property>
      </widget>
     </widget>
